# babelio-scraping-api

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  render.yaml
src/: __init__.py  routes.py  scraper.py
