[tool.poetry]
name = "babelio-scraping-api"
version = "0.1.0"
description = "Flask scraping API babelio"
authors = ["Rémi DUPUY"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
flask-cors = "^5.0.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
